# nostr-vpn

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Cross.toml  Dockerfile.e2e  Dockerfile.lan-pair-probe  Justfile  README.md  docker-compose.e2e.yml  docker-compose.exit-node-e2e.yml  docker-compose.fips-e2e.yml  docker-compose.lan-pair-e2e.yml  docker-compose.nat-e2e.yml  docker-compose.relay-fallback.e2e.yml  docker-compose.wireguard-exit-e2e.yml  zapstore.yaml
.github/workflows/: ci.yml  release.yml  windows-smoke.yml
android/: README.md
android/app/: build.gradle.kts
crates/nostr-vpn-app-core/: Cargo.toml  README.md
crates/nostr-vpn-app-core/examples/: lan_pair_probe.rs
crates/nostr-vpn-app-core/src/: actions.rs  c_abi.rs  ffi.rs  invite.rs  lan_pairing.rs  lib.rs  mobile_tunnel.rs  native_state.rs  platform.rs  state.rs  wg_upstream_nat.rs
crates/nostr-vpn-cli/: Cargo.toml  README.md
crates/nostr-vpn-cli/src/: config_bootstrap.rs  daemon_runtime.rs  diagnostics.rs  fips_host_tunnel.rs  fips_private_mesh.rs  macos_service.rs  main.rs  network_signaling.rs  pipeline_profile.rs  platform_routing.rs  service_management.rs  session_runtime.rs  updater.rs  wg_upstream_runtime.rs  wireguard_exit.rs
crates/nostr-vpn-core/: Cargo.toml  README.md
crates/nostr-vpn-core/src/: config.rs  config_defaults.rs  config_magic_dns.rs  config_secrets.rs  control.rs  data_plane.rs  diagnostics.rs  fips_control.rs  fips_mesh.rs  invite.rs  join_requests.rs  lan_pairing.rs  lib.rs  magic_dns.rs  paths.rs  platform_paths.rs  recent_peers.rs  updater.rs  wg_upstream.rs
crates/nostr-vpn-core/tests/: config_tests.rs  magic_dns_tests.rs  path_tests.rs  presence_tests.rs  state_tests.rs
crates/nostr-vpn-core/tests/config_tests/: defaults.rs  magic_dns.rs  network.rs
crates/nostr-vpn-core/tests/signaling_e2e/: local_relay_signaling.rs  multi_network_signaling.rs  relay_payloads.rs
crates/nostr-vpn-gui/: package.json  pnpm-lock.yaml
crates/nostr-vpn-gui/e2e-tauri/: join-request.mjs  smoke.mjs
crates/nostr-vpn-gui/scripts/: ios-icons.test.mjs
crates/nostr-vpn-gui/src/: ActiveNetworkPanel.svelte  AdvancedPanels.svelte  App.svelte  HeroStatusPanel.svelte  SystemPanel.svelte  UpdateBanner.svelte  app.css
crates/nostr-vpn-gui/src-tauri/: Cargo.toml  tauri.conf.json
crates/nostr-vpn-reflector/: Cargo.toml
crates/nostr-vpn-web/: Cargo.toml
crates/nostr-vpn-web/src/: invite.rs  main.rs  network_views.rs  nvpn_cli.rs  ui_models.rs  ui_types.rs
crates/nostr-vpn-wintun/: Cargo.toml  README.md
docs/: EXPERIMENTS.md  fips-data-plane-integration-plan.md  mobile-test-kit.md  native-ui-parity-matrix.md  path-maintenance-architecture.md  protocol.md
docs/privacy/: index.html
ios/: README.md  project.yml
ios/Bindings/: NostrVpnAppCoreC.h
ios/NostrVpnIos.xcodeproj/: project.pbxproj
ios/PacketTunnel/: PacketTunnelProvider.swift
ios/Sources/: AppModel.swift  Models.swift  NativeCoreClient.swift  PacketTunnelController.swift  RootView.swift  ScreenshotFixtures.swift
linux/: Cargo.toml  Dockerfile  README.md  docker-compose.yml
linux/scripts/: e2e-smoke.sh
linux/src/: main.rs  qr_scan.rs  tray.rs  updater.rs
macos/: README.md  project.yml
macos/Bindings/: NostrVpnAppCore.swift  NostrVpnAppCoreFFI.h
macos/NostrVpnMac.xcodeproj/: project.pbxproj
macos/Resources/: preview-state.json
macos/Sources/: AppLifecycle.swift  AppManager.swift  NostrVpnMacApp.swift  PrivilegedCommandRunner.swift  RootView.swift  TrayController.swift
scripts/: appstore-draft  build-nvpn-armv6-musl  build-nvpn-linux-musl  build-output-path  e2e-active-network-docker.sh  e2e-connect-docker.sh  e2e-divergent-roster-docker.sh  e2e-docker.sh  e2e-exit-node-docker.sh  e2e-fips-docker.sh  e2e-fips-nat-safe-mtu-docker.sh  e2e-fips-perf-regression-docker.sh  e2e-fips-roaming-docker.sh  e2e-fips-routed-udp-docker.sh  e2e-lan-pair-2peer-docker.sh  e2e-macos-service.sh  e2e-nat-docker.sh  e2e-roster-admin-docker.sh  e2e-tauri-driver-docker.sh  e2e-update-cli.sh  e2e-update-desktop.sh  e2e-update-windows-vm.sh  e2e-wireguard-exit-docker.sh  e2e-wireguard-exit-node-docker.sh  e2e-wireguard-exit-userspace-docker.sh  ios-release  ios-screenshots  local-release-lib.mjs  local-release.mjs  local-release.test.mjs  macos-app-launch-smoke.sh  macos-build  mobile-android-smoke.sh  mobile-ios-smoke.sh  mobile-test-kit.sh  perf-docker-cpu.sh  perf-docker-relay.sh  publish.sh  regen-app-icons  release-gate.sh  (+11 more)
scripts/dev/: deploy-dev-vm.sh
startos/versions/: current.ts
tools/: run-linux  run-macos  run-windows
umbrel/: Dockerfile  docker-compose.local.yml  docker-compose.yml  umbrel-app.yml
windows/: README.md
windows/NostrVpn.Windows/: App.xaml  App.xaml.cs  Converters.cs  MainWindow.xaml  MainWindow.xaml.cs  NostrVpn.Windows.csproj
(+58 files in other folders)
