[workspace]
members = [
  "crates/nostr-vpn-app-core",
  "crates/nostr-vpn-app-core/uniffi-bindgen",
  "crates/nostr-vpn-core",
  "crates/nostr-vpn-cli",
  "crates/nostr-vpn-web",
  "crates/nostr-vpn-wintun",
]
exclude = ["linux"]
resolver = "2"

[workspace.package]
version = "4.0.9"
edition = "2024"
license = "MIT"
authors = ["sirius"]

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
axum = { version = "0.8", features = ["ws"] }
base64 = "0.22"
boringtun = "0.7"
clap = { version = "4.5", features = ["derive", "env"] }
dirs = "6"
fips-endpoint = { git = "https://github.com/mmalmi/fips.git", rev = "0b96f9c541ec3bea9cd511a9840210099101bd92" }
futures = "0.3"
hex = "0.4"
hickory-proto = "0.25"
hostname = "0.4"
rand = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
socket2 = "0.6"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.28"
toml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uniffi = "0.29"
uuid = { version = "1", features = ["v4", "serde"] }
nostr-sdk = { version = "0.35", default-features = false, features = ["nip44"] }

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[workspace.lints.rust]
unsafe_code = "forbid"

# TEMP: route fips-endpoint through the local ../fips checkout for the
# process_packet cleanup pass. Local fips changes flow through to the
# docker bench (which mounts ../fips at /app/fips) without push +
# rev-bump cycles per iteration. REMOVE before committing perf changes
# to nvpn master.
[patch."https://github.com/mmalmi/fips.git"]
fips-endpoint = { path = "../fips-rehandshake/crates/fips-endpoint" }
fips-core = { path = "../fips-rehandshake/crates/fips-core" }
fips-identity = { path = "../fips-rehandshake/crates/fips-identity" }
