[package]
name = "nostr-vpn-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Shared Nostr VPN configuration, diagnostics, MagicDNS, NAT, and WireGuard runtime code"
repository.workspace = true
readme = "README.md"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
base64.workspace = true
# `device` feature pulls in `boringtun::device::tun::TunSocket` (POSIX
# only — uses kqueue/epoll), so leave it off in the default dep set
# and let target-specific overrides below opt back in.
boringtun = { workspace = true }
nostr-sdk.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
uuid.workspace = true
hex.workspace = true
hickory-proto.workspace = true
hostname.workspace = true
netdev.workspace = true
socket2.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "2"

[dev-dependencies]
